package com.apetrei.engine.input;

public enum InputType {
    UP, DOWN, CONTINUOUS,
    MOUSE_UP, MOUSE_DOWN, MOUSE_CONTINUOUS, NULL
}
