@startuml

title __SKEWED ENGINE's Class Diagram__\n

  namespace com.apetrei.engine {
    class com.apetrei.engine.ConfigHandler {
    }
  }
  

  namespace com.apetrei.engine {
    class com.apetrei.engine.GameContainer {
    }
  }
  

  namespace com.apetrei.engine {
    class com.apetrei.engine.GameObject {
    }
  }
  

  namespace com.apetrei.engine {
    class com.apetrei.engine.ObjectManager {
    }
  }
  

  namespace com.apetrei.engine {
    namespace components {
      class com.apetrei.engine.components.BackgroundSprite {
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace components {
      class com.apetrei.engine.components.Collider2D {
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace components {
      abstract class com.apetrei.engine.components.Component {
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace components {
      class com.apetrei.engine.components.PlayerComponent {
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace components {
      class com.apetrei.engine.components.SpriteComponent {
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace components {
      class com.apetrei.engine.components.TransformComponent {
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace components {
      class com.apetrei.engine.components.TurretComponent {
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace exceptions {
      class com.apetrei.engine.exceptions.ComponentMissingException {
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace exceptions {
      class com.apetrei.engine.exceptions.SpriteNotFoundException {
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace input {
      class com.apetrei.engine.input.Input {
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace input {
      class com.apetrei.engine.input.InputEvent {
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace input {
      enum InputType {
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace physics {
      class com.apetrei.engine.physics.PhysicsSystem2D {
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace physics {
      namespace primitives {
        class com.apetrei.engine.physics.primitives.Ray2D {
        }
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace physics {
      namespace primitives {
        class com.apetrei.engine.physics.primitives.RaycastResult {
        }
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace physics {
      namespace primitives {
        namespace colliders {
          class com.apetrei.engine.physics.primitives.colliders.Box2DCollider {
          }
        }
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace physics {
      namespace primitives {
        namespace colliders {
          class com.apetrei.engine.physics.primitives.colliders.ConvexCollider {
          }
        }
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace physics {
      namespace rigidbody {
        class com.apetrei.engine.physics.rigidbody.CollisionManifold {
        }
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace physics {
      namespace rigidbody {
        class com.apetrei.engine.physics.rigidbody.Collisions {
        }
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace physics {
      namespace rigidbody {
        class com.apetrei.engine.physics.rigidbody.IntersectionDetector2D {
        }
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace physics {
      namespace rigidbody {
        class com.apetrei.engine.physics.rigidbody.Rigidbody2D {
        }
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace renderer {
      class com.apetrei.engine.renderer.Camera {
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace renderer {
      class com.apetrei.engine.renderer.ImageLoader {
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace renderer {
      class com.apetrei.engine.renderer.Renderer {
      }
    }
  }
  

  namespace com.apetrei.engine {
    namespace renderer {
      class com.apetrei.engine.renderer.Window {
      }
    }
  }
  

  namespace com.apetrei.game {
    class com.apetrei.game.GameManager {
    }
  }
  

  namespace com.apetrei.misc {
    class com.apetrei.misc.AABB {
    }
  }
  

  namespace com.apetrei.misc {
    class com.apetrei.misc.ConvexPolygon2D {
    }
  }
  

  namespace com.apetrei.misc {
    class com.apetrei.misc.ExtraMath {
    }
  }
  

  namespace com.apetrei.misc {
    class com.apetrei.misc.Line {
    }
  }
  

  namespace com.apetrei.misc {
    class com.apetrei.misc.Vector2 {
    }
  }
  

  com.apetrei.engine.GameContainer .up.|> java.lang.Runnable
  com.apetrei.engine.GameContainer o-- com.apetrei.engine.input.Input : input
  com.apetrei.engine.GameContainer o-- com.apetrei.engine.ObjectManager : objectManager
  com.apetrei.engine.GameContainer o-- com.apetrei.engine.physics.PhysicsSystem2D : physicsSystem
  com.apetrei.engine.GameContainer o-- com.apetrei.engine.renderer.Renderer : renderer
  com.apetrei.engine.GameContainer o-- com.apetrei.engine.renderer.Window : window
  com.apetrei.engine.GameObject .up.|> java.io.Serializable
  com.apetrei.engine.ObjectManager o-- com.apetrei.engine.GameContainer : gameContainer
  com.apetrei.engine.components.BackgroundSprite -up-|> com.apetrei.engine.components.Component
  com.apetrei.engine.components.BackgroundSprite o-- com.apetrei.engine.components.TransformComponent : transformComponent
  com.apetrei.engine.components.Collider2D -up-|> com.apetrei.engine.components.Component
  com.apetrei.engine.components.Collider2D o-- com.apetrei.engine.physics.rigidbody.Rigidbody2D : rigidbody
  com.apetrei.engine.components.Component .up.|> java.io.Serializable
  com.apetrei.engine.components.Component o-- com.apetrei.engine.GameObject : parent
  com.apetrei.engine.components.PlayerComponent -up-|> com.apetrei.engine.components.Component
  com.apetrei.engine.components.PlayerComponent o-- com.apetrei.engine.physics.rigidbody.Rigidbody2D : rigidbody
  com.apetrei.engine.components.PlayerComponent o-- com.apetrei.engine.components.TurretComponent : turretComponent
  com.apetrei.engine.components.SpriteComponent -up-|> com.apetrei.engine.components.Component
  com.apetrei.engine.components.SpriteComponent o-- com.apetrei.engine.components.TransformComponent : transformComponent
  com.apetrei.engine.components.TransformComponent -up-|> com.apetrei.engine.components.Component
  com.apetrei.engine.components.TurretComponent -up-|> com.apetrei.engine.components.Component
  com.apetrei.engine.components.TurretComponent o-- com.apetrei.engine.physics.rigidbody.Rigidbody2D : rigidbody
  com.apetrei.engine.input.Input .up.|> java.awt.event.KeyListener
  com.apetrei.engine.input.Input .up.|> java.awt.event.MouseListener
  com.apetrei.engine.input.Input .up.|> java.awt.event.MouseMotionListener
  com.apetrei.engine.input.Input .up.|> java.awt.event.MouseWheelListener
  com.apetrei.engine.input.Input o-- com.apetrei.engine.GameContainer : gameContainer
  com.apetrei.engine.input.InputEvent o-- com.apetrei.engine.input.InputType : inputType
  com.apetrei.engine.physics.primitives.colliders.Box2DCollider -up-|> com.apetrei.engine.components.Collider2D
  com.apetrei.engine.physics.primitives.colliders.ConvexCollider -up-|> com.apetrei.engine.components.Collider2D
  com.apetrei.engine.physics.primitives.colliders.ConvexCollider o-- com.apetrei.misc.ConvexPolygon2D : collider
  com.apetrei.engine.physics.rigidbody.Rigidbody2D -up-|> com.apetrei.engine.components.TransformComponent
  com.apetrei.engine.renderer.Renderer o-- com.apetrei.engine.renderer.Camera : camera
  com.apetrei.engine.renderer.Renderer o-- com.apetrei.engine.GameContainer : gc
  com.apetrei.misc.ConvexPolygon2D .up.|> java.io.Serializable
  com.apetrei.misc.Line .up.|> java.io.Serializable
  com.apetrei.misc.Vector2 .up.|> java.io.Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
